fixes review